# AssetForge

./: .gitignore  DEVELOPMENT_PLAN.md  PROJECT_SPEC.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assetforge/: __init__.py
assetforge/blender_addon/: __init__.py  handlers.py  mcp_control.py  operators.py  panel.py  prefs.py
assetforge/blender_addon/backends/: __init__.py  registry.py
assetforge/blender_addon/backends/animation/: __init__.py  soma_retarget.py
assetforge/blender_addon/backends/geometry/: __init__.py  bake.py  collision.py  export_.py  export_unity.py  instant_meshes.py  lod.py  retopo.py  utils.py  uv.py
assetforge/core/: Kimodo_Retarget_Constraint.py  Kimodo_Retarget_Gemini.py  __init__.py  adapter.py  asset_state.py  pipeline.py  provenance.py  resolver.py  stages.py
assetforge/core/backends/: __init__.py  _platform.py  registry.py  stubs.py
assetforge/core/backends/generation/: copilot3d.py  meshy.py
assetforge/core/backends/kimodo/: __init__.py  kimodo.py
assetforge/core/backends/meshy/: __init__.py  _base.py  animation.py  retexture.py  rigging.py
assetforge/core/backends/remesh/: __init__.py  meshy_remesh.py
assetforge/local/: export_npz_to_bvh.py  serve_kimodo.py
assetforge/local/bvh2fbx/: combine_fbx.py
assetforge/mcp_server/: server.py
assetforge/modal/: kimodo_app.py
examples/: run_chain.py
tests/: test_asset_state.py  test_meshy_remesh.py  test_meshy_wiring.py  test_pipeline.py  test_resolver.py
