[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "assetforge"
version = "0.1.0"
description = "AI game-asset pipeline core engine (Blender-independent)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["assetforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
